<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/menuitem_bind"
        android:title="@string/action_bind"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menuitem_clear"
        android:title="@string/action_clearlog"
        android:icon="@drawable/ic_action_remove"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menuitem_clearalert"
        android:title="@string/action_clearalert"
        android:icon="@drawable/ic_action_remove"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menuitem_test"
        android:title="@string/action_test"
        android:icon="@drawable/ic_action_network_cell"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menuitem_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/tts_enabled"
        android:title="@string/action_tts_on"
        android:icon="@drawable/ic_action_volume_on"
        app:showAsAction="never"/>
    <item android:id="@+id/tts_disabled"
        android:title="@string/action_tts_off"
        android:icon="@drawable/ic_action_volume_muted"
        app:showAsAction="never"/>
</menu>
