<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/details"
    android:background="@drawable/background_content">
    <LinearLayout
        android:id="@+id/battery_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_battery_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="100%"/>
        <ImageView
            android:id="@+id/iv_battery"
            android:layout_width="48dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/picto_battery_100"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        android:layout_above="@+id/button_layout"
        android:orientation="vertical"
        android:background="@color/light_transparent_bg">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <ImageView
                android:id="@+id/img_device"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"/>
            <Switch
                android:id="@+id/switch_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:visibility="visible"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxEms="8"
            android:singleLine="true"/>
        <TextView
            android:id="@+id/tv_attr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingLeft="@dimen/abc_action_bar_default_padding_material"
            android:background="@drawable/btn_gradient"
            android:text="ATTR1:"/>
        <TextView
            android:id="@+id/tv_attr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/abc_action_bar_default_padding_material"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_gradient"
            android:text="ATTR2:"/>
        <Button
            android:id="@+id/btn_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="102dp"
            android:gravity="left"
            android:padding="@dimen/abc_action_bar_default_padding_material"
            android:maxLines="2"
            android:visibility="visible"
            android:textColor="@android:color/black"
            android:background="@drawable/selector_edittext"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/button_voice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/button_mic"
            android:background="@drawable/selector_timer_button"/>
        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/selector_timer_button"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/white"
            android:text="@string/save"/>
        <Button
            android:id="@+id/button_remove"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/selector_remove_button"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/discard"/>
    </LinearLayout>
</RelativeLayout>